[package]
name = "raft-kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raft-kv-server"
path = "src/main.rs"

[[bin]]
name = "raft-kv-client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "6.0"
rand = "0.8"
futures = "0.3"
